# VerdantisAgro

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_core_schema.py  0002_lead_thread_id.py  0003_suppression_entries.py  0004_lead_fit_score_run_id.py
backend/src/verdantis/api/: deps.py  main.py  rate_limit.py
backend/src/verdantis/config/: constants.py  settings.py
backend/src/verdantis/db/: base.py  enums.py  models.py  provenance.py  redis.py  session.py
backend/src/verdantis/models/: dossier.py  tenant_config.py
backend/src/verdantis/observability/: __init__.py  logging.py  sentry.py  tracing.py
backend/tests/: conftest.py
backend/tests/agents/inbound/: test_graph.py
backend/tests/agents/outbound/: test_graph.py
backend/tests/agents/shared/: test_checkpointer.py  test_run_config.py
backend/tests/api/: test_health.py
backend/tests/api/routers/: test_admin.py  test_inbound.py  test_leads.py  test_outbound.py  test_suppression.py
backend/tests/core/adapters/: test_manual_export.py  test_resilience.py
backend/tests/core/auth/: test_clerk.py
backend/tests/core/compliance/: test_suppression.py
backend/tests/core/crm/: test_hubspot.py
backend/tests/core/dossier/: test_service.py
backend/tests/core/evals/: test_feedback.py
backend/tests/core/intake/: test_normalize.py
backend/tests/core/llm/: test_cache.py  test_client.py  test_pricing.py
backend/tests/core/notify/: test_email.py  test_slack.py
backend/tests/core/outreach/: test_draft.py
backend/tests/core/scoring/: test_credibility.py  test_fit.py  (+1 more)
backend/tests/db/: test_provenance.py
(+105 files in other folders)
